Program renamed to "VoiceMaker." Cleaning up load from resource/filesystem and adding comments.